tests/asm-link/label-before-endc/rgbasm.err
error: syntax error: unexpected endc
   ╭─[ test.asm:4:9 ]
   │
 4 │ label0: endc
   │         ──┬─  
   │           ╰─── expected "identifier", "adc", "add", "and", "bit", "call", "ccf", ...76 others
───╯
error: syntax error: unexpected endc
   ╭─[ test.asm:7:9 ]
   │
 7 │ label1: endc
   │         ──┬─  
   │           ╰─── expected "identifier", "adc", "add", "and", "bit", "call", "ccf", ...76 others
───╯
error: unterminated conditional block
   ╭─[ test.asm:5:1 ]
   │
 5 │ if 2
   │ ─┬  
   │  ╰── this `if` is missing a corresponding `endc`
───╯
error: unterminated conditional block
   ╭─[ test.asm:2:1 ]
   │
 2 │ if 1
   │ ─┬  
   │  ╰── this `if` is missing a corresponding `endc`
───╯
4 errors generated.
